# repo-curso-arquitetura-boas-praticas

./: .gitignore  LICENSE  README.md  pyproject.toml  seed.py
.devcontainer/: Dockerfile  README.md  devcontainer.json  init-firewall.sh
app/: main.py
app/api/v1/: games.py  groups.py  players.py  router.py
app/core/: database.py  settings.py
app/models/: __init__.py  base.py  game.py  group.py  player.py
app/schemas/: game.py  group.py  player.py
app/services/: game_service.py  group_service.py  player_service.py
tests/: conftest.py  test_games.py  test_groups.py  test_players.py
