[project]
name = "soccer-manager"
version = "0.1.0"
description = "Weekend soccer game manager"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.136.3",
    "sqlalchemy==2.0.50",
    "pydantic==2.13.4",
    "pydantic-settings>=2.7.0",
    "uvicorn[standard]>=0.24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
